--- a/build-tool/build.gradle
+++ b/build-tool/build.gradle
@@ -51,7 +51,7 @@ ext.ps = File.pathSeparator
 ext.fs = File.separator
 ext.projName = 'BhSimulator'
 ext.jarLibName = 'Jlib'
-ext.bhRuntimeJarName = 'bhruntime.jar'
+ext.bhRuntimeJarName = 'bhruntimelib.jar'
 
 application {
   // Define the main class for the application.
@@ -69,7 +69,7 @@ task prepareLibs(type: Copy) {
 
   doLast {
     ant.copy(todir: "$projectDir/../$appDirName/$jarLibName") {
-      fileset(dir: "$projectDir/..", includes: "$bhRuntimeJarName")
+      fileset(dir: "$projectDir/../lib", includes: "$bhRuntimeJarName")
     }
   }
 }
