--- a/build-tool/build.gradle
+++ b/build-tool/build.gradle
@@ -30,6 +30,7 @@ dependencies {
   implementation "com.badlogicgames.gdx:gdx-freetype:1.12.1"
   implementation "com.kotcrab.vis:vis-ui:1.5.3"
   implementation "com.github.mgsx-dev.gdx-gltf:gltf:2.2.1"
+  implementation 'commons-cli:commons-cli:1.9.0'
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
