BhRuntime に依存しないように修正した

--- a/build-tool/build.gradle
+++ b/build-tool/build.gradle
@@ -52,7 +52,6 @@ ext.ps = File.pathSeparator
 ext.fs = File.separator
 ext.projName = 'BhSimulator'
 ext.jarLibName = 'Jlib'
-ext.bhRuntimeJarName = 'bhruntimelib.jar'
 ext.bhUtilityJarName = 'bhutility.jar'
 
 application {
@@ -73,7 +72,7 @@ task prepareLibs(type: Copy) {
     ant.copy(todir: "$projectDir/../$appDirName/$jarLibName") {
       fileset(
         dir: "$projectDir/../lib",
-        includes: "$bhRuntimeJarName,$bhUtilityJarName")
+        includes: "$bhUtilityJarName")
     }
   }
 }
