--- a/build-tool/build.gradle
+++ b/build-tool/build.gradle
@@ -4,11 +4,6 @@
  * This generated file contains a sample Java application project to get you started.
  * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.8/userguide/building_java_projects.html in the Gradle documentation.
  */
-
-import org.apache.tools.ant.taskdefs.condition.Os
-import java.util.regex.*
-import java.nio.file.*
-
 plugins {
   // Apply the application plugin to add support for building a CLI application in Java.
   id 'application'
@@ -30,6 +25,7 @@ dependencies {
   implementation "com.badlogicgames.gdx:gdx-freetype:1.12.1"
   implementation "com.kotcrab.vis:vis-ui:1.5.3"
   implementation "com.github.mgsx-dev.gdx-gltf:gltf:2.2.1"
+  implementation 'com.google.code.gson:gson:2.11.0'
   implementation 'commons-cli:commons-cli:1.9.0'
 }
 
